--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '',
-      repo: ''
+      name: 'Skyier',
+      repo: '',
+      themeColor: '#007bff',
+      routerMode: 'history',
+      logo: '/_media/logo_skyier.png',
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
