--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
       themeColor: '#007bff',
       routerMode: 'history',
       logo: '/_media/logo_skyier.png',
+      search: 'auto',
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+  <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
 </body>
 </html>
