--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
       themeColor: '#007bff',
       routerMode: 'history',
       logo: '/_media/logo_skyier.png',
-      search: 'auto',
+
+      search: {
+        maxAge: 86400000, // Expiration time, the default one day
+        paths: 'auto',
+        placeholder: 'Szukaj...',
+        noData: 'Brak wyników',
+        // Headline depth, 1 - 6
+        depth: 6,
+        hideOtherSidebarContent: false, // whether or not to hide other sidebar content
+     }
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
