--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       themeColor: '#007bff',
       routerMode: 'history',
       logo: '/_media/logo_skyier.png',
+      search: 'auto',
 
       search: {
         maxAge: 86400000, // Expiration time, the default one day
@@ -26,7 +27,7 @@
         placeholder: 'Szukaj...',
         noData: 'Brak wyników',
         // Headline depth, 1 - 6
-        depth: 3,
+        depth: 4,
         hideOtherSidebarContent: false, // whether or not to hide other sidebar content
      }
     }
